--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <canvas id="stage" width="300" height="400"></canvas>
-    <script src="index3.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
